--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,93 @@ body{
 .wrapper__renderBox{
     max-width: 500px;
 }
+.error{
+    display: none;
+    color: red;
+}
+@media (max-width: 980px){
+    :root{
+        --font-size-text: 1.562rem;
+        --font-size-title: 1.5rem;
+        --color: #000000;
+        --border-radius: 0.200rem;
+        --title-weight: 700;
+        --border: 0.0625rem solid #000000;
+        --line-height-form: 2rem;
+    }
+    .container{
+        max-width: 950px;
+        margin: 0 auto;
+        padding: 0px 0.937rem;
+    }
+    .info-text{
+        font-size: var(--font-size-title);
+        color: var(--color);
+        line-height: var(--line-height-form);
+        margin-bottom: 3.43rem;
+    }
+    
+    .write__title{
+        height: 40px;
+        border-radius: var(--border-radius);
+        border: var(--border);
+        font-size: var(--font-size-title);
+        line-height: var(--line-height-form);
+        outline: none;
+        padding: 15px;
+    }
+    .write__post{
+        resize: none;
+        height: 180px;
+        border-radius: var(--border-radius);
+        font-size: var(--font-size-title);
+        border: var(--border);
+        margin-block: 30px;
+        line-height: var(--line-height-form);
+        outline: none;
+        padding: 1.25rem;
+    }
+    .createPost{
+        background-color: #0094FF;
+        height: 40px;
+        font-size: var(--font-size-title);
+        line-height: var(--line-height-form);
+        border-radius: var(--border-radius);
+    }
+    .render__title{
+        font-size: var(--font-size-title);
+        margin-bottom: 1rem;
+        word-wrap: break-word;
+    }
+    .render__post{
+        font-size: var(--font-size-text);
+        word-wrap: break-word;
+    }
+    .post{
+        width: 100%;
+        margin-block: 1.5rem;
+    }
+    .post-text{
+        opacity: 40%;
+        font-size: var(--font-size-title);
+    }
+    .post-display{
+        display: none;
+    }
+    .render__time{
+        color: #0094FF;
+        font-size: var(--font-size-text);
+        line-height: 1rem;
+    }
+    .wrapper__renderBox{
+        max-width: 50%;
+    }
+}
+
+@media (max-width: 600px){
+    .container{
+        max-width: 570px;
+        margin: 0 auto;
+        padding: 0px 0.937rem;
+    }
+}
